--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,13 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+
+}
+
+.flex-cont {
+display: flex;
+justify-content: center;
+gap: 50px;
+text-align: center;
 }
 
 img {
@@ -7,9 +15,22 @@ img {
   height: 100px;
 }
 
+
+
+
+
+.flex-img {
+
+  max-width: 220px;
+}
+
+
 .title {
   font-size: 36px;
   font-weight: 900;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
 }
 
 /* do not edit this footer */
